# faf-rust-replayserver

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TODO  compose.yaml  sqlx-data.json
.github/workflows/: ci.yml  release.yml
.sqlx/: query-00bfa6e7da567a5ffb0ab1599e9bbdbf20e4599e68d4817821494f0d02721883.json  query-84083717c119dd0b2c28afabbd4776c786c870898012fbc48cc8aefe1a9aa7d2.json  query-b1316c72620a90243c773583a8579ee6a295335dc23759fd83f0f65cf6dfc485.json
docs/: Makefile  architecture.rst  conf.py  documented_config.yml  extra_headers.rst  index.rst  introduction.rst  usage.rst
docs/diagrams/: replay.dia
src/: config.rs  error.rs  integration_tests.rs  lib.rs  main.rs  metrics.rs  worker_threads.rs
src/accept/: acceptor.rs  header.rs  mod.rs  producer.rs  reconnect_header.rs  reconnect_registry.rs
src/async_utils/: buf_deque.rs  buf_list.rs  buf_traits.rs  buf_with_discard.rs  buflist.rs  empty_counter.rs  mod.rs  progress.rs
src/database/: database.rs  mod.rs  queries.rs
src/process_test/: process_panic.rs  sigint.rs
src/replay/: header.rs  mod.rs  position.rs  replay.rs  replays.rs  runner.rs  test.rs
src/replay/receive/: merge_strategy.rs  merged_replay.rs  merger.rs  mod.rs  quorum_merge_strategy.rs  replay_delay.rs  writer_replay.rs
src/replay/save/: directory.rs  json_header.rs  mod.rs  saver.rs  writer.rs
src/replay/send/: mod.rs  sender.rs
src/replay/streams/: header.rs  merged_replay.rs  merged_replay_reader.rs  mod.rs  position.rs  replay.rs  writer_replay.rs
src/server/: bufreadwrite.rs  connection.rs  mod.rs  server.rs  signal.rs  websocket_stream.rs  workers.rs
src/util/: buf_deque.rs  buf_list.rs  buf_traits.rs  consumer.rs  empty_counter.rs  event.rs  mod.rs  process.rs  progress.rs  test.rs  timeout.rs
src/worker_threads/: mod.rs  thread_pool.rs  worker.rs
test/: clear_and_populate_db.sh  db_unit_test_data.sql  run_coverage.sh  run_process_tests.sh
test/resources/: example_body  example_config.yml  example_header
test/resources/integration/: game_2000.fafreplay  game_2001.fafreplay
test/resources/test_configs/: invalid_no_ports.yml  optional_tcp_port.yml
