[package]
name = "faf-rust-replayserver"
version = "0.3.1"
authors = ["Igor Kotrasinski <i.kotrasinsk@gmail.com>"]
edition = "2018"

[features]
local_db_tests = []
process_tests = []
bench = []
fuzzing_tests = []

[[bin]]
name = "faf_rust_replayserver"
path = "src/main.rs"

[[bin]]
name = "test_sigint"
path = "src/process_test/sigint.rs"
required-features = ["process_tests"]

[[bin]]
name = "test_process_panic"
path = "src/process_test/process_panic.rs"
required-features = ["process_tests"]

[dependencies]
async-compression = { version = "0.3.8", features = ["tokio", "zstd"] }
async-stream = "0.3.2"
config = { version = "0.11.0", features = ["yaml"] }
env_logger = "0.9.0"
faf-replay-parser = "0.5.1"
futures = "0.3.19"
lazy_static = "1.4.0"
log = "0.4.14"
prometheus_exporter = "0.8.3"
rand = "0.8.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
signal-hook = "0.3.13"
sqlx = { version = "0.5.10", features = ["runtime-tokio-native-tls", "mysql", "time", "offline"] }
thiserror = "1.0.30"
time = { version = "0.2.27", features = ["std"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
tokio-util = "0.6.9"
weak-table = "0.3.2"

[dependencies.tokio]
version = "1.15.0"
features = ["sync", "net", "io-util", "rt", "macros", "test-util", "time"]

[dev-dependencies]
faux = "0.1.5"
tempfile = "3.2.0"
