[package]
name = "faf-rust-replayserver"
version = "0.3.2"
authors = ["Igor Kotrasinski <i.kotrasinsk@gmail.com>"]
edition = "2018"

[features]
local_db_tests = []
process_tests = []
bench = []
fuzzing_tests = []

[[bin]]
name = "faf_rust_replayserver"
path = "src/main.rs"

[[bin]]
name = "test_sigint"
path = "src/process_test/sigint.rs"
required-features = ["process_tests"]

[[bin]]
name = "test_process_panic"
path = "src/process_test/process_panic.rs"
required-features = ["process_tests"]

[dependencies]
async-compression = { version = "0.4.22", features = ["tokio", "zstd"] }
async-stream = "0.3.6"
config = { version = "0.15.11", features = ["yaml"] }
env_logger = "0.11.8"
faf-replay-parser = "0.6.0"
futures = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.27"
prometheus_exporter = "0.8.5"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
signal-hook = "0.3.17"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "mysql", "time"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["std"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tokio-util = "0.7.14"
tokio-websockets = { version = "0.11.4", features = ["server", "openssl"] }
weak-table = "0.3.2"

[dependencies.tokio]
version = "1.44.2"
features = ["sync", "net", "io-util", "rt", "macros", "test-util", "time", "rt-multi-thread"]

[dev-dependencies]
faux = "0.1.12"
tempfile = "3.19.1"
